# odglos

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING
data/: CMakeLists.txt  com.holypangolin.ODGLOS.appdata.xml  odglos.desktop
data/animations/: 02statki_szyszki_tasmy_animacja2.awebp  031_donice_dom1.awebp  03statki_szyszki_tasmy_animacja3.awebp  04statki_szyszki_tasmy_gra_dzwiek1.awebp  04statki_szyszki_tasmy_gra_dzwiek2.awebp  04statki_szyszki_tasmy_gra_dzwiek3.awebp  06statki_szyszki_tasmy_animacja5.awebp  DSCF2305.awebp  DSCF2311.awebp  DSCF2320.awebp  DSCF2449.awebp  aksamitki_samochod_sowka.awebp  aksamitki_waz_r.awebp  altanka.awebp  animacja_koncowa.awebp  animacja_poczatkowa.awebp  buty_drewniane.awebp  buzia_01_bez_niczego.awebp  buzia_02_sowa.awebp  buzia_03_kuzyn.awebp  buzia_04_myszka.awebp  ciemna_trawa_waz.awebp  ciemna_trawa_waz_r.awebp  dmuchawa_ptaszor_sam.awebp  donica_w_hortensjach_01_donica_sie_pojawia.awebp  donica_w_hortensjach_02_sowka_srednia_wchodzi.awebp  donica_w_hortensjach_03_sowka_srednia_wychodzi.awebp  donica_w_hortensjach_04_samochod_z_sowka_wyjezdza.awebp  donica_w_hortensjach_05_samochod_z_sowka_wjezdza.awebp  donica_w_hortensjach_06_waz.awebp  donice_01_samochod_duzy_jedzie_w_prawo.awebp  donice_02_samochod_duzy_jedzie_w_lewo.awebp  donice_03_samochod_duzy_wjezdza_do_donicy_z_lewej.awebp  donice_04_samochod_maly_z_sowka_wyjezdza_w_prawo.awebp  donice_05_samochod_maly_bez_sowki_wyjezdza_w_przod.awebp  donice_06_samochod_maly_z_sowka_wyjezdza_w_przod.awebp  donice_07_sowka_srednia_wjezdza_do_donicy_z_lewej.awebp  donice_08_mala_sowka_z_samochodem_wyjezdza_w_przod.awebp  donice_10_sowka_srednia_wjezdza_do_donicy_z_prawej.awebp  donice_11_waz_buszuje_w_prawo_w_lewo_i_wchodzi_z_lewej.awebp  (+113 more)
data/animations/004_sowka_wchodzi_na_drzewo/: sowka_wchodzi_na_drzewo.awebp
data/animations/010_sowka_na_trawie/: sowka_na_trawie.awebp
data/animations/012_sowka_konfrontacja_z_rzezba/: sowka_konfrontacja_z_rzezba.awebp
data/animations/021_donice_w_ogrodzie_stare/: donice_w_ogrodzie_stare_samochod_waz.awebp
data/animations/022_samochod_waz_kominek/: samochod_waz_kominek.awebp
data/animations/024_026_028_032_037_040_042_059_donice_w_ogrodzie/: 037_donice_w_ogrodzie5.awebp  042_donice_w_ogrodzie7.awebp  059_donice_w_ogrodzie8.awebp
data/animations/025_silacz1/: animacja_silacz1.awebp
data/animations/029_silacz3_maly_samochod_sam/: anim.awebp
data/animations/030b_sowka_i_rzezby_animacja/: sowka_i_rzezby.awebp
data/animations/031_058_donice_dom/: 031_donice_dom1.awebp
data/animations/034_plansza_do_sudoku_pionki/: plansza_do_sudoku_pionki.awebp
data/animations/035_038_donice_na_tarasie/: 038_donice_na_tarasie2.awebp
data/armata/: armata_strzela.awebp  armata_strzela.ini
data/byk/: crunch.flac  dwor.flac  funky.flac
data/fonts/: README
data/html/: index.html
data/icons/: icon.rc  odglos.icns
data/lawka_w_parku/: lawka.awebp  lawka.ini
data/masks/: DSCF0067_maska_bez_stolu.mask  DSCF0067_maska_ze_stolem.mask  DSCF0286_maska.mask  DSCF0566_maska_obszary.mask  DSCF0566_maska_same_sowki.mask  DSCF1595_maska.mask  DSCF2296_maska_caly.mask  DSCF2296_maska_oczy_ewentualnie.mask  DSCF2433_maska.mask  DSCF2982_maska.mask  DSCF3781_maska.mask  DSCF4234_maska.mask  DSCF4999_maska.mask  DSCF5025_maska.mask  DSCF7440_maska.mask  DSCF7440_maska2_z_zakochana_para.mask  DSCF8146_maska.mask  DSCF8160_maska.mask  DSCF8382_maska.mask  DSCF8387_maska.mask  DSCF8646_maska.mask  DSCF8976_maska.mask  DSCF9030_maska.mask  DSCF9467_maska_magnetofon.mask  IMG_0053_maska.mask  IMG_0770_maska.mask  IMG_1010_maska.mask  donica_w_hortensjach_maska.mask  donice_w_ogrodzie_maski.mask  duch_portalu_maska_przycieta.mask  duch_portalu_oczy_osobno00_maska.mask  krzeslo_w_lesie08_maska.mask  lawka_w_parku_maski.mask  maska_schodek1.mask  maska_schodek2.mask  maska_schodek3.mask  maska_schodek4.mask  naparstki.mask  naparstki2.mask  podniebny_generator_z_kosmosem00_maska.mask  (+9 more)
data/shaders/: circular_gradient.glsl  grain.glsl  vertex.glsl
data/sounds/: BARREL HIT 1K STUD 3 FX 02 00 37 .flac  BARREL HIT 2 K STUD 3 FX 05 23 65.flac  BIG BEN DIGI SZ TRIC L 07 46 74 - 49 17.flac  BIG BOING S LIST FX 00 10 32-001 .flac  BIRDY K K LAP L 05 29 08.flac  BIRDY K K LAP L 05 29 08.flac.opus  CENTAURI SZ MIRAC L 06 20 79 - 24 61.flac  CENTAURI SZ MIRAC L 06 20 79 - 24 61.flac.opus  CRICKET GOSSIP 2S VIEW L 03 54 93.flac  CRICKET GOSSIP 2S VIEW L 03 54 93.flac.opus  CRICKET GOSSIP S VIEW L 03 49 48.flac  CRICKET GOSSIP S VIEW L 03 49 48.flac.opus  DIGI DOGZ K NOR L 04 16 61.flac  DIGI DOGZ K NOR L 04 16 61.flac.opus  DRUNK DRONE K NOR L 15 31 2.flac  DRUNK DRONE K NOR L 15 31 2.flac.opus  ELVES S LIST L 08 57 95.flac  ELVES S LIST L 08 57 95.flac.opus  JAMMIN K LAP L 18 10 23.flac  JAMMIN K LAP L 18 10 23.flac.opus  K OLD FX 08 14 79-001.flac  K OLD O 00 13 75-001.flac  K OLD O 00 13 75-001.flac.opus  K OLD P 04 47 86.flac  K RESZT FX 03 27 28-001.flac  K RESZT FX 03 27 28-001.flac.opus  K ROB FX 02 40 06-001.flac  K ROB FX 03 26 00-001.flac  K ROB FX 03 26 00-001.flac.opus  K STUD 01 25 13-001.flac  K STUD 01 25 13-001.flac.opus  K STUD 01 36 84-001.flac  K STUD 01 39 48-001.flac  K STUD 01 39 48-001.flac.opus  LASER SHOWER S LIST L 12 35 45.flac  LASER SHOWER S LIST L 12 35 45.flac.opus  LOWEST ENDK RESZT L 07 13 36.flac  MAD CASPER SZ AGNT L 00 02 10 45 - 13 89.flac  MAD CASPER SZ AGNT L 00 02 10 45 - 13 89.flac.opus  MADAT S LIST FX 14 09 89-001 R.flac  (+169 more)
data/sounds/lawka/: 1.flac  1.flac.opus  (+77 more)
src/: CMakeLists.txt  animation.c  audio.c  common.c  common.h  download.c  main.c  player.c  scenes.c
src/gamestates/: anim.c  armata.c  blank.c  byk.c  dispatcher.c  downloader.c  end.c  example.c  gawron_medrzec.c  headphones.c  lawka.c  loading.c  logo.c  miska.c  myszka.c  naparstki.c  naparstki2.c  pergola.c  pudelka.c  samochod_kominek.c  samochod_lazienka.c  samochod_wiklinowy_fotel.c  schodki_i_sowka.c  sowka_idzie_w_pd_wsch_przyciete.c  sowka_idzie_w_prawo_przyciete.c  sowka_wraca_przyciete.c  start.c  sucha_trawa_aksamitki_samochod_waz.c  zielona_trawa_samochod_waz.c
(+336 files in other folders)
